manifests/base/4-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-app
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: api-app
