manifests/base/5-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - api-app.subdomain.example.com
      secretName: api-app-tls
  ingressClassName: nginx
  rules:
    - host: api-app.subdomain.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-app
                port:
                  number: 8080
